Video delete, post, getOne added and working
